--- a/ci/pipeline.yml.erb
+++ b/ci/pipeline.yml.erb
@@ -1,5 +1,5 @@
 <%
-  kubernetes_versions = %w(stable-1.19 stable-1.20 stable-1.21 stable-1.22 stable-1.23 latest)
+  kubernetes_versions = %w(stable-1.20 stable-1.21 stable-1.22 stable-1.23 stable-1.24 stable-1.25 stable-1.26 stable-1.27 stable-1.28 latest)
   def tag(version); version.sub(/^stable-/, ''); end
   def image_resource_name(version); "kubernetes-resource-image-" + tag(version); end
 
